--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "discord-interactions": "^4.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "prisma": "^5.21.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
