--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "DevPeriwal07",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "5.21.1",
     "discord-interactions": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
